Add Intel SPR results for streaming kernels

--- a/D3.2/D3.2_codesign.tex
+++ b/D3.2/D3.2_codesign.tex
@@ -428,6 +428,12 @@ streaming operations implemented using different frameworks on CPU and GPU archi
   \label{fig:streaming_omp_grace}
 \end{figure}
 
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.8\textwidth]{omp_intel_SPR} % replace with your filename
+  \caption{Streaming kernel results on Intel Xeon Platinum 8480+ using OpenMP-annotated do-loops. All kernels achieve over 60\% of the peak bandwidth.}
+  \label{fig:streaming_omp_sapphirerapids}
+\end{figure}
 
 
 \section{Energy Efficiency}
