--- a/D3.2/refs.bib
+++ b/D3.2/refs.bib
@@ -109,3 +109,22 @@ title = {Programming Your GPU with OpenMP: Performance Portability for GPUs},
 publisher = {MIT Press},
 year = 2023
 }
+
+@inproceedings{Laukemann2024,
+  title={Microarchitectural comparison and in-core modeling of state-of-the-art CPUs: Grace, Sapphire Rapids, and Genoa},
+  author={Laukemann, Jan and Hager, Georg and Wellein, Gerhard},
+  booktitle={SC24-W: Workshops of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+  pages={1405--1412},
+  year={2024},
+  organization={IEEE}
+}
+
+@misc{Hager2021,
+  author       = {Georg Hager},
+  title        = {Write-allocate evasion has finally arrived at Intel -- or has it?},
+  year         = {2021},
+  month        = {October},
+  day          = {27},
+  howpublished = {\url{https://blogs.fau.de/hager/archives/8997}},
+  note         = {Accessed: 2025-08-30}
+}
